add readme file

--- a/EvoucherSample/appsettings.json
+++ b/EvoucherSample/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MysqlConncetion": "server=127.0.0.1;port=3306;user=root;password=@gg@D3v3l0p3r;database=EvoucherDB;SSL Mode=None"
+    "MysqlConncetion": ""
   },
   "Logging": {
     "LogLevel": {
